# setools

./: .coveragerc  .gitignore  .gitmodules  .mypy.ini  .pylintrc  .travis.yml  COPYING  ChangeLog  KNOWN-BUGS  MANIFEST.in  README  README.md  UNSTABLE_API  apol  pyproject.toml  requirements.txt  sechecker  sediff  sedta  seinfo  seinfoflow  sesearch  setools-mcp  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
data/: apol.ui  boolquery.ui  boundsquery.ui  categoryquery.ui  choose_analysis.ui  commonquery.ui  constraintquery.ui  defaultquery.ui  dta.ui  exclude_types.ui  fsusequery.ui  genfsconquery.ui  infoflow.ui  initsidquery.ui  mlsrulequery.ui  netifconquery.ui  nodeconquery.ui  objclassquery.ui  perm_map  portconquery.ui  rbacrulequery.ui  rolequery.ui  sensitivityquery.ui  summary.ui  terulequery.ui  typeattrquery.ui  typequery.ui  userquery.ui
libapol/: __init__.py  boolquery.py  commonquery.py  contextquery.py  dta.py  objclassquery.py  permissivequery.py  permmap.py  polcapquery.py  rolequery.py  rulequery.py  terulequery.py  typequery.py  userquery.py
libqpol/: avrule_query.c  bool_query.c  bounds_query.c  class_perm_query.c  cond_query.c  config.h  constraint_query.c  context_query.c  default_object_query.c  ftrule_query.c  genfscon_query.c  isid_query.c  iterator.c  iterator_internal.h  libqpol.map  mls_query.c  mlsrule_query.c  module.c  module_compiler.c  module_compiler.h  policy.c  policy_define.c  policy_define.h  policy_extend.c  policy_parse.c  policy_parse.h  policy_parse.y  policy_scan.c  policy_scan.l  qpol_internal.h  queue.c  (+9 more)
(+608 files in other folders)
