[build-system]
requires = ["setuptools", "Cython>=0.27"]
build-backend = "setuptools.build_meta"


#
# Coverage config
#
[tool.coverage.run]
source = ["setools"]
plugins = ["Cython.Coverage"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover",
                 "def __repr__",
                 "raise NotImplementedError",
                 "return NotImplemented"]


#
# Mypy config
#
[tool.mypy]
no_implicit_optional = true
pretty = true

[[tool.mypy.overrides]]
module = ['networkx.*',
          'PyQt5.*',
          'sip']
ignore_missing_imports = true


#
# Pytest config
#
[tool.pytest.ini_options]
addopts = ["--import-mode=importlib",]
pythonpath = "."
